kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openmind
  labels:
    name: openmind
    app: openmind-ai
